--- a/man/hub.1.html
+++ b/man/hub.1.html
@@ -169,12 +169,13 @@ set the repository's description and homepage URL, respectively.</p></dd>
 specified, <code>browse</code> opens the page of the repository found in the current
 directory. If SUBPAGE is specified, the browser will open on the specified
 subpage: one of "wiki", "commits", "issues" or other (the default is
-"tree").</p></dd>
+"tree"). With <code>-u</code>, outputs the URL rather than opening the browser.</p></dd>
 <dt><code>git compare</code> [<code>-u</code>] [<var>USER</var>] [<var>START</var>...]<var>END</var></dt><dd><p>Open a GitHub compare view page in the system's default web browser.
 <var>START</var> to <var>END</var> are branch names, tag names, or commit SHA1s specifying
 the range of history to compare. If a range with two dots (<code>a..b</code>) is given,
 it will be transformed into one with three dots. If <var>START</var> is omitted,
-GitHub will compare against the base branch (the default is "master").</p></dd>
+GitHub will compare against the base branch (the default is "master").
+With <code>-u</code>, outputs the URL rather than opening the browser.</p></dd>
 <dt><code>git fork</code> [<code>--no-remote</code>]</dt><dd><p>Forks the original project (referenced by "origin" remote) on GitHub and
 adds a new remote for it under your username.</p></dd>
 <dt><code>git pull-request</code> [<code>-f</code>] [<var>TITLE</var>|<code>-i</code> <var>ISSUE</var>|<var>ISSUE-URL</var>] [<code>-b</code> <var>BASE</var>] [<code>-h</code> <var>HEAD</var>]</dt><dd><p>Opens a pull request on GitHub for the project that the "origin" remote
@@ -440,7 +441,7 @@ $ git help hub
 
   <ol class='man-decor man-foot man foot'>
     <li class='tl'>DEFUNKT</li>
-    <li class='tc'>March 2013</li>
+    <li class='tc'>December 2013</li>
     <li class='tr'>hub(1)</li>
   </ol>
 
